--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,14 +27,12 @@ html,
 body {
   width: 100%;
   height: 100%;
+  min-height: 100%;
   overflow-x: hidden;
   background-color: var(--bg-color);
 }
 
 body{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding-inline: 35px;
   scroll-behavior: smooth;
 }
